# split-money-linebot

./: .gitignore  Procfile  README.md  app.py  client_secrets.json  clock.py  db.py  drive_method.py  linebot_flask.py  mycreds.txt  pyproject.toml  requirements.txt
config/: config.ini  mycreds.txt
linebot/: bot.py
mybot/: bot.py  config.py  db.py
program/: bot.py  config.py  db.py
src/: bot.py  config.py  db.py
