[tool.poetry]
name = "split-money-linebot"
version = "2.0.0"
description = ""
authors = ["Hank Chou <hengtse.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
flask = "^3.0.0"
python-dotenv = "^1.0.0"
line-bot-sdk = "^3.5.0"
tabulate = "^0.9.0"
pymongo = "^4.5.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
